--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -320,6 +320,15 @@
   #frame5 .center .left .rectangle .image img {
     width: 115%;
   }
+
+  #frame7 .row .col #kelompokForm #buttonbandingkankiri {
+    margin: 0px;
+    padding: 0px;
+    font-size: 11px;
+    text-align: center;
+    height: 38px;
+    max-width: 7.6vw;
+  }
 }
 
 @media screen and (max-width: 1024px) {
@@ -338,8 +347,8 @@
     height: 100%;
     z-index: -1;
     box-shadow: 10px 10px 100px 10px rgba(0,0,0,0.7) inset;
--webkit-box-shadow: 10px 10px 100px 10px rgba(0,0,0,0.7) inset;
--moz-box-shadow: 10px 10px 100px 10px rgba(0,0,0,0.7) inset;
+    -webkit-box-shadow: 10px 10px 100px 10px rgba(0,0,0,0.7) inset;
+    -moz-box-shadow: 10px 10px 100px 10px rgba(0,0,0,0.7) inset;
     background-image: url('/assets/img/orangvr.jpg');
     /* background-image: url('/assets/img/'); */
     background-size: cover;
@@ -465,6 +474,15 @@
   #frame5 .center .left .rectangle .image img {
     width: 125%;
   }
+
+  #frame7 .row .col #judulPerbandingan {
+    font-size: 25px
+  }
+
+  /* #frame7 .row .col #kelompokForm #buttonbandingkankiri {
+    font-size: 9px;
+    margin-right: 15px;
+  } */
 }
 
 @media screen and (max-width: 820px) {
@@ -587,6 +605,10 @@
     padding-top: 0;
   }
   
+  #frame7 .row .col #kelompokForm #buttonbandingkankiri {
+    margin-left: 1px;
+    margin-right: 1px;
+  }
 }
 
 @media screen and (max-width: 620px) {
