--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -189,6 +189,10 @@
     border-radius: 30px;
     object-fit: cover;
   }
+
+  #frame7 .row .col #kelompokForm #buttonbandingkankiri {
+    font-size: 12px;
+  }
 }
 
 @media screen and (max-width: 1152px) {
@@ -476,13 +480,12 @@
   }
 
   #frame7 .row .col #judulPerbandingan {
-    font-size: 25px
+    font-size: 40px;
   }
 
-  /* #frame7 .row .col #kelompokForm #buttonbandingkankiri {
-    font-size: 9px;
-    margin-right: 15px;
-  } */
+  #frame7 .row .col #kelompokForm #buttonbandingkankiri {
+    font-size: 10px;
+  }
 }
 
 @media screen and (max-width: 820px) {
