--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -135,6 +135,11 @@
     width: 100%;
   }
 
+  #frame7 .row .col #kelompokForm #buttonbandingkankiri {
+    font-size: 14px;
+    margin-left: 0.8rem;
+    height: 38px;
+  }
 }
 
 @media screen and (max-height: 1024px) and (max-width: 1280px) {
@@ -201,7 +206,8 @@
   }
 
   #frame7 .row .col #kelompokForm #buttonbandingkankiri {
-    font-size: 12px;
+    font-size: 13px;
+    height: 38px;
   }
 }
 
@@ -340,12 +346,9 @@
   }
 
   #frame7 .row .col #kelompokForm #buttonbandingkankiri {
-    margin: 0px;
-    padding: 0px;
     font-size: 11px;
-    text-align: center;
+    margin-left: 0.8rem;
     height: 38px;
-    max-width: 7.6vw;
   }
 }
 
@@ -503,6 +506,9 @@
 
   #frame7 .row .col #kelompokForm #buttonbandingkankiri {
     font-size: 10px;
+    margin-left: 0.8rem;
+    padding: 0px;
+    height: 38px;
   }
 }
 
@@ -625,7 +631,7 @@
     font-size: 2vh;
     padding-top: 0;
   }
-  
+
   #frame5 .text h1 {
     width: 70%;
     margin: auto;
@@ -634,35 +640,87 @@
 
   #frame5 .icon {
     display: none;
-}
+  }
 
-#frame5 .center .right .info .item-top-left {
- border-radius: 10px;
- border: 1px solid #fafafa;
-}
-#frame5 .center .right .info .item-top-right {
- border-radius: 10px;
- border: 1px solid #fafafa;
- text-align: left;
-}
+  #frame5 .center .right .info .item-top-left {
+  border-radius: 10px;
+  border: 1px solid #fafafa;
+  }
+  #frame5 .center .right .info .item-top-right {
+  border-radius: 10px;
+  border: 1px solid #fafafa;
+  text-align: left;
+  }
 
-#frame5 .center .right .info .item-bottom-left {
- border-radius: 10px;
- border: 1px solid #fafafa;
-}
+  #frame5 .center .right .info .item-bottom-left {
+  border-radius: 10px;
+  border: 1px solid #fafafa;
+  }
 
-#frame5 .center .right .info .item-bottom-right {
- text-align: left;
- border-radius: 10px;
- border: 1px solid #fafafa;
-}
-#frame5 .text-behind {
- display: none;
-}
+  #frame5 .center .right .info .item-bottom-right {
+  text-align: left;
+  border-radius: 10px;
+  border: 1px solid #fafafa;
+  }
+  #frame5 .text-behind {
+  display: none;
+  }
+
+  #frame6 #dekorasiKomponen1 {
+    background-color: #ffa500;
+    width: 5vw;
+    height: 2vh;
+  }
+  
+  #frame6 #dekorasiKomponen2 {
+    background-color: #ffa500;
+    width: 5vw;
+    height: 2vh;
+    margin-left: 1rem;
+  }
+
+  #frame6 .isiFrame6 .row .col #isiTengahKomponen {
+    height: 20vh;
+    width: 15vw;
+  }
+
+  #frame7 .row .col #judulPerbandingan {
+    font-size: 30px;
+  }
+
+  #frame7 .row .col #kelompokForm #bandingkanForm {
+  height: 30px;
+  width: 170px;
+  }
+  #frame7 .row .col #kelompokForm #bandingkanForm1 {
+  height: 30px;
+  width: 243px;
+  }
 
   #frame7 .row .col #kelompokForm #buttonbandingkankiri {
-    margin-left: 1px;
-    margin-right: 1px;
+    font-size: 8.5px;
+    margin-left: 0.6rem;
+    height: 30px;
+    padding: 0px;
+  }
+
+  #footer .row .col .fw-light .fs-5 {
+    font-size: 18px;
+  }
+
+  #footer .row .col .fw-light .p-1 {
+    font-size: 14px;
+  }
+
+  #footer .row .col #wandiPengertianFooter {
+    font-size: 14px;
+  }
+
+  #footer .row .col #wandiInputFooter {
+    font-size: 14px;
+  }
+  #footer .row .col #wandiButtonFooter {
+    font-size: 14px;
   }
 }
 
