--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -9,6 +9,11 @@
   width: 100%;
 }
 
+.nav a {
+  color: black;
+  text-decoration: none;
+}
+
 a {
   color: black;
   text-decoration: none;
@@ -24,5 +29,5 @@ a {
 }
 
 .nav-button {
-  display: none   ;
+  display: none;
 }
