--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1114,20 +1114,20 @@
   .nav {
     position: fixed;
     z-index: 999;
-    width: 100%; /* Adjust width as needed */
+    width: 100%; 
   }
   
   .nav-button {
     background-color: #fff;
     color: black;
     border-radius: 50%;
-    width: 10vw; /* Adjust width based on viewport */
-    height: 10vw; /* Maintain aspect ratio */
+    width: 10vw; 
+    height: 10vw; 
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    font-size: 2vw; /* Adjust font size based on viewport */
+    font-size: 2vw; 
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     position: absolute;
     top: 20px;
@@ -1137,7 +1137,7 @@
   
   .nav-content {
     position: absolute;
-    top: 12vw; /* Adjust based on nav-button height */
+    top: 12vw;
     left: 0;
     right: 0;
     width: 80% !important;
