update fitur spek

--- a/assets/css/style-panduan.css
+++ b/assets/css/style-panduan.css
@@ -300,7 +300,10 @@ button.button-footer-panduan {
     height: 450px;
   }
 }
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 480px) {
+  div.title {
+    margin-top: 20%;
+  }
   /* content responsive */
   .carousel {
     position: relative;
