--- a/assets/css/style-spec.css
+++ b/assets/css/style-spec.css
@@ -127,6 +127,7 @@
     /* content responsive */
     .tittle h1 {
       font-size: 32px;
+      margin-top: 15%;
     }
 
     .img-carousel-banner {
