--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1130,15 +1130,15 @@
     font-size: 2vw; 
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     position: absolute;
-    top: 20px;
-    left: 10px;
+    top: 50px;
+    left: 5%;
     z-index: 1000;
   }
   
   .nav-content {
     position: absolute;
-    top: 12vw;
-    left: 0;
+    top: 18vw;
+    left: 5%;
     right: 0;
     width: 80% !important;
     display: flex;
