--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1131,14 +1131,14 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     position: absolute;
     top: 50px;
-    left: 2%;
+    left: 10px;
     z-index: 1000;
   }
   
   .nav-content {
     position: absolute;
     top: 18vw;
-    left: 5%;
+    left: 15px;
     right: 0;
     width: 80% !important;
     display: flex;
