--- a/assets/css/style-spec.css
+++ b/assets/css/style-spec.css
@@ -76,6 +76,9 @@
     width: 75px;
     height: 75px;
   }
+  .spec {
+    padding: 4rem;
+  }
 }
 @media only screen and (max-width: 1800px) {
   .content-spec-carousel {
@@ -87,6 +90,9 @@
   .content-spec-carousel svg {
     width: 75px;
     height: 75px;
+  }
+  .spec {
+    padding: 4rem;
   }
 }
 @media only screen and (max-width: 1600px) {
@@ -100,6 +106,9 @@
     width: 75px;
     height: 75px;
   }
+  .spec {
+    padding: 4rem;
+  }
 }
 @media only screen and (max-width: 1400px) {
   .content-spec-carousel {
@@ -111,6 +120,9 @@
   .content-spec-carousel svg {
     width: 75px;
     height: 75px;
+  }
+  .spec {
+    padding: 4rem;
   }
 }
 @media only screen and (max-width: 1366px) {
