--- a/assets/css/style-panduan.css
+++ b/assets/css/style-panduan.css
@@ -74,6 +74,7 @@ button.button-footer-panduan {
 
 /* responsive */
 @media only screen and (min-width: 1920px) {
+
   /* content responsive */
   .title h1 {
     font-size: 80px;
@@ -107,6 +108,7 @@ button.button-footer-panduan {
 }
 
 @media only screen and (max-width: 1366px) {
+
   /* content responsive */
   .tittle h1 {
     font-size: 64px;
@@ -115,6 +117,8 @@ button.button-footer-panduan {
   img.img-carousel-panduan {
     width: 75%;
     border-radius: 10px;
+    height: 450px;
+    background-size: cover;
   }
 
   div.kotak-biru-kiri {
@@ -137,6 +141,7 @@ button.button-footer-panduan {
 }
 
 @media only screen and (max-width: 1024px) {
+
   /* content responsive */
   div.kotak-biru-kiri {
     width: 15px;
@@ -177,6 +182,7 @@ button.button-footer-panduan {
 }
 
 @media only screen and (max-width: 780px) {
+
   /* content responsive */
   div.kotak-biru-kiri {
     width: 15px;
@@ -221,6 +227,7 @@ button.button-footer-panduan {
 }
 
 @media only screen and (max-width: 779px) {
+
   /* content responsive */
   .carousel {
     position: relative;
@@ -266,7 +273,9 @@ button.button-footer-panduan {
     height: 250px;
   }
 }
+
 @media only screen and (max-width: 650px) {
+
   /* content responsive */
   .carousel {
     position: relative;
@@ -283,7 +292,9 @@ button.button-footer-panduan {
     height: 450px;
   }
 }
+
 @media only screen and (max-width: 550px) {
+
   /* content responsive */
   .carousel {
     position: relative;
@@ -300,10 +311,12 @@ button.button-footer-panduan {
     height: 450px;
   }
 }
+
 @media only screen and (max-width: 480px) {
   div.title {
     margin-top: 20%;
   }
+
   /* content responsive */
   .carousel {
     position: relative;
@@ -320,7 +333,9 @@ button.button-footer-panduan {
     height: 400px;
   }
 }
+
 @media only screen and (max-width: 350px) {
+
   /* content responsive */
   .carousel {
     position: relative;
