--- a/assets/css/style-panduan.css
+++ b/assets/css/style-panduan.css
@@ -107,7 +107,7 @@ button.button-footer-panduan {
   }
 }
 
-@media only screen and (max-width: 1366px) {
+@media only screen and (max-width: 1800px) {
 
   /* content responsive */
   .tittle h1 {
@@ -117,7 +117,6 @@ button.button-footer-panduan {
   img.img-carousel-panduan {
     width: 75%;
     border-radius: 10px;
-    height: 450px;
     background-size: cover;
   }
 
@@ -127,6 +126,7 @@ button.button-footer-panduan {
     left: 20vh;
     top: 0;
   }
+
 
   div.kotak-biru-kanan {
     width: 15px;
@@ -140,6 +140,257 @@ button.button-footer-panduan {
   }
 }
 
+@media only screen and (max-width: 1700px) {
+
+  /* content responsive */
+  .tittle h1 {
+    font-size: 64px;
+  }
+
+  img.img-carousel-panduan {
+    width: 75%;
+    border-radius: 10px;
+    background-size: cover;
+  }
+
+  div.kotak-biru-kiri {
+    width: 15px;
+    height: 15px;
+    left: 20vh;
+    top: 0;
+  }
+
+
+  div.kotak-biru-kanan {
+    width: 15px;
+    height: 50px;
+    right: 20vh;
+    bottom: 0;
+  }
+
+  .carousel-caption h5 {
+    font-size: 24px;
+  }
+}
+
+@media only screen and (max-width: 1600px) {
+
+  /* content responsive */
+  .tittle h1 {
+    font-size: 64px;
+  }
+
+  img.img-carousel-panduan {
+    width: 75%;
+    border-radius: 10px;
+    background-size: cover;
+  }
+
+  div.kotak-biru-kiri {
+    width: 15px;
+    height: 15px;
+    left: 20vh;
+    top: 0;
+  }
+
+
+  div.kotak-biru-kanan {
+    width: 15px;
+    height: 50px;
+    right: 20vh;
+    bottom: 0;
+  }
+
+  .carousel-caption h5 {
+    font-size: 24px;
+  }
+}
+
+@media only screen and (max-width: 1500px) {
+
+  /* content responsive */
+  .tittle h1 {
+    font-size: 64px;
+  }
+
+  img.img-carousel-panduan {
+    width: 75%;
+    border-radius: 10px;
+    background-size: cover;
+  }
+
+  div.kotak-biru-kiri {
+    width: 15px;
+    height: 15px;
+    left: 20vh;
+    top: 0;
+  }
+
+
+  div.kotak-biru-kanan {
+    width: 15px;
+    height: 50px;
+    right: 20vh;
+    bottom: 0;
+  }
+
+  .carousel-caption h5 {
+    font-size: 24px;
+  }
+}
+@media only screen and (max-width: 1366px) {
+
+  /* content responsive */
+  .tittle h1 {
+    font-size: 64px;
+  }
+
+  img.img-carousel-panduan {
+    width: 75%;
+    border-radius: 10px;
+    background-size: cover;
+  }
+
+  div.kotak-biru-kiri {
+    width: 15px;
+    height: 15px;
+    left: 20vh;
+    top: 0;
+  }
+  
+
+  div.kotak-biru-kanan {
+    width: 15px;
+    height: 50px;
+    right: 20vh;
+    bottom: 0;
+  }
+
+  .carousel-caption h5 {
+    font-size: 24px;
+  }
+}
+
+@media only screen and (max-width: 1300px) {
+
+  /* content responsive */
+  div.kotak-biru-kiri {
+    width: 15px;
+    height: 15px;
+    left: 15vh;
+    top: 0;
+  }
+
+  .carousel-caption h5 {
+    font-size: 20px;
+  }
+
+  div.kotak-biru-kanan {
+    width: 15px;
+    height: 50px;
+    right: 15vh;
+    bottom: 0;
+  }
+
+  .carousel-caption {
+    height: 200px;
+    overflow-y: auto;
+    scrollbar-width: thin;
+  }
+
+  .carousel-caption::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  .carousel-caption::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+  }
+
+  .carousel-caption::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+}
+@media only screen and (max-width: 1200px) {
+
+  /* content responsive */
+  div.kotak-biru-kiri {
+    width: 15px;
+    height: 15px;
+    left: 15vh;
+    top: 0;
+  }
+
+  .carousel-caption h5 {
+    font-size: 20px;
+  }
+
+  div.kotak-biru-kanan {
+    width: 15px;
+    height: 50px;
+    right: 15vh;
+    bottom: 0;
+  }
+
+  .carousel-caption {
+    height: 200px;
+    overflow-y: auto;
+    scrollbar-width: thin;
+  }
+
+  .carousel-caption::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  .carousel-caption::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+  }
+
+  .carousel-caption::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+}
+@media only screen and (max-width: 1100px) {
+
+  /* content responsive */
+  div.kotak-biru-kiri {
+    width: 15px;
+    height: 15px;
+    left: 15vh;
+    top: 0;
+  }
+
+  .carousel-caption h5 {
+    font-size: 20px;
+  }
+
+  div.kotak-biru-kanan {
+    width: 15px;
+    height: 50px;
+    right: 15vh;
+    bottom: 0;
+  }
+
+  .carousel-caption {
+    height: 200px;
+    overflow-y: auto;
+    scrollbar-width: thin;
+  }
+
+  .carousel-caption::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  .carousel-caption::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+  }
+
+  .carousel-caption::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+}
 @media only screen and (max-width: 1024px) {
 
   /* content responsive */
