--- a/assets/css/style-hasil.css
+++ b/assets/css/style-hasil.css
@@ -54,6 +54,7 @@ div.ovel-screen {
   .grafik img {
     width: 400px;
   }
+
   .baterai-screen {
     width: 50%;
   }
@@ -61,6 +62,7 @@ div.ovel-screen {
   .memory {
     width: 50%;
   }
+
   .title {
     font-size: 32px;
   }
@@ -82,6 +84,7 @@ div.ovel-screen {
   .grafik img {
     width: 400px;
   }
+
   .baterai-screen {
     width: 50%;
   }
@@ -89,6 +92,7 @@ div.ovel-screen {
   .memory {
     width: 50%;
   }
+
   .title {
     font-size: 32px;
   }
@@ -110,6 +114,7 @@ div.ovel-screen {
   .grafik img {
     width: 400px;
   }
+
   .baterai-screen {
     width: 50%;
   }
@@ -117,6 +122,7 @@ div.ovel-screen {
   .memory {
     width: 50%;
   }
+
   .title {
     font-size: 32px;
   }
@@ -134,6 +140,7 @@ div.ovel-screen {
   .konten .data-2 {
     width: 50%;
   }
+
   .baterai-screen {
     width: 50%;
   }
@@ -141,6 +148,7 @@ div.ovel-screen {
   .memory {
     width: 50%;
   }
+
   .title {
     font-size: 32px;
   }
@@ -226,7 +234,7 @@ div.ovel-screen {
 
 }
 
-@media only screen and (max-width: 300px) {
+@media only screen and (max-width: 375px) {
   .title {
     font-size: 20px;
   }
@@ -249,5 +257,87 @@ div.ovel-screen {
 
   .memory {
     width: 100%;
+  }
+
+  .vga thead tr{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .vga tbody {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .vga tbody tr {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .vga tbody td {
+    width: 100% !important;
+    text-align: center !important;
+  }
+
+  .vga tbody td p {
+    text-align: center !important;
+  }
+
+  .vga tbody td .rounded-pill {
+    margin: 0;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  .title {
+    font-size: 20px;
+  }
+
+  .grafik img {
+    width: 300px;
+  }
+
+  .judul-text p {
+    font-size: 16px;
+  }
+
+  .Batenmer {
+    flex-direction: column;
+  }
+
+  .baterai-screen {
+    width: 100%;
+  }
+
+  .memory {
+    width: 100%;
+  }
+
+  .vga thead tr{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .vga tbody {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .vga tbody tr {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .vga tbody td {
+    width: 100% !important;
+    text-align: center !important;
+  }
+
+  .vga tbody td p {
+    text-align: center !important;
+  }
+
+  .vga tbody td .rounded-pill {
+    margin: 0;
   }
 }
