--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,54 +1,157 @@
-@media only screen and (max-width: 700px) {
+/* laptop and tablet */
+@media only screen and (max-width: 1920px) {
+  .footer .bottom {
+    padding: 0.5rem 3rem;
+    display: flex;
+    justify-content: space-between;
+  }
 
-    #footer .row .col #wandiPengertianFooter {
-        font-size: 14px;
-        display: none;
-    }
+  .footer .data-desc-2 {
+    width: 30%;
+  }
+  .footer .data-desc-1 ul li {
+    font-size: 20px;
+  }
 
-    #footer .col #wandiGambarFooter {
-        width: 27vw;
-        display: none;
-    }
+  .footer .data-desc-2 ul li {
+    font-size: 20px;
+  }
+  .footer .data-desc-2 ul li.judul-desc {
+    font-size: 24px;
+  }
 
-    #footer .gambar {
-        display: none;
-    }
+  .footer .desc .data-desc-2 input {
+    background-color: #d9d9d9;
+    color: #000;
+    font-size: 16px;
+  }
 
-    #footer .col .d-flex #wandiButtonFooter {
-        position: absolute;
-        left: 47.2%;
-    }
+  .footer .desc .data-desc-2 button {
+    background-color: #004fce;
+    color: #fff;
+    font-size: 16px;
+  }
 
-    #footer .bottom {
-        display: flex;
-        margin-bottom: 10%;
-    }
+  .footer .bottom p {
+    font-size: 20px;
+  }
 
-    #footer .copyright {
-        width: fit-content;
-        margin-left: 5%;
-        font-size: 16px;
-    }
+  .footer .data-desc-2 button:hover {
+    background-color: #989898;
+  }
+}
+@media only screen and (max-width: 1366px) {
+  .footer .bottom {
+    padding: 0.5rem 3rem;
+    display: flex;
+    justify-content: space-between;
+  }
 
-    #footer .cp {
-        margin: 0 !important;
-    }
+  .footer .data-desc-2 {
+    width: 30%;
+  }
 
-    #footer #footer {
-        padding: 0 !important;
-        padding-left: 5%;
-    }
+  .footer .desc .data-desc-2 input {
+    background-color: #d9d9d9;
+    color: #000;
+  }
+
+  .footer .desc .data-desc-2 button {
+    background-color: #004fce;
+    color: #fff;
+  }
+
+  .footer .data-desc-2 button:hover {
+    background-color: #989898;
+  }
+  .footer .data-desc-1 ul li {
+    font-size: 16px;
+  }
+
+  .footer .data-desc-2 ul li {
+    font-size: 16px;
+  }
+  .footer .data-desc-2 ul li.judul-desc {
+    font-size: 20px;
+  }
+
+  .footer .desc .data-desc-2 input {
+    background-color: #d9d9d9;
+    color: #000;
+    font-size: 12px;
+  }
+
+  .footer .desc .data-desc-2 button {
+    background-color: #004fce;
+    color: #fff;
+    font-size: 12px;
+  }
+
+  .footer .bottom p {
+    font-size: 16px;
+  }
 }
 
-@media (min-width: 576px) {
-    .offset-sm-2 {
-        margin-left: 0;
-    }
+/* mobile */
+@media only screen and (max-width: 768px) {
+  .footer .desc {
+    flex-direction: column;
+  }
+  .footer .desc .data-desc-1 {
+    width: 100%;
+  }
+  .footer .desc .data-desc-1 ul {
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+  }
+  .footer .desc .data-desc-2 {
+    width: 100%;
+  }
+  .footer .desc .data-desc-1 ul {
+    padding: 0;
+  }
+  .footer .desc .data-desc-2 ul {
+    padding: 0;
+  }
+  .footer .desc .data-desc-3 {
+    display: none;
+  }
+  .footer .bottom {
+    padding: 0.5rem 1rem;
+    display: flex;
+    justify-content: space-between;
+  }
 }
-
 @media only screen and (max-width: 480px) {
+  .footer .desc .data-desc-1 {
+    width: 100%;
+  }
+  .footer .desc .data-desc-1 ul {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    justify-content: center;
+  }
+  .footer .desc .data-desc-2 {
+    width: 100%;
+  }
+  .footer .desc .data-desc-1 ul {
+    padding: 0;
+  }
+  .footer .desc .data-desc-2 ul {
+    padding: 0;
+  }
+  .footer .desc .data-desc-3 {
+    display: none;
+  }
 
-    #footer .row #judulTengahFooter {
-        font-size: 20px;
-    }
+  .footer .bottom {
+    padding: 0.5rem 1rem;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
 }
