--- a/assets/css/style-hasil.css
+++ b/assets/css/style-hasil.css
@@ -41,6 +41,9 @@ div.ovel-screen {
   justify-content: between;
   align-items: center;
 }
+.to-mobile {
+  display: none;
+}
 
 @media only screen and (min-width: 1920px) {
   .konten .data-1 {
@@ -231,7 +234,6 @@ div.ovel-screen {
   .carousel-item img {
     width: 25px;
   }
-
 }
 
 @media only screen and (max-width: 375px) {
@@ -259,23 +261,11 @@ div.ovel-screen {
     width: 100%;
   }
 
-  .vga thead tr{
-    display: flex;
-    flex-direction: column;
-  }
-
-  .vga tbody {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .vga tbody tr {
-    display: flex;
-    flex-direction: column;
-  }
-
   .vga tbody td {
-    width: 100% !important;
+    text-align: center !important;
+  }
+  .vga tbody td.overal {
+    width: 50% !important;
     text-align: center !important;
   }
 
@@ -285,6 +275,12 @@ div.ovel-screen {
 
   .vga tbody td .rounded-pill {
     margin: 0;
+  }
+  .to-mobile {
+    display: flex;
+  }
+  .to-pc-tab {
+    display:none;
   }
 }
 
@@ -313,23 +309,11 @@ div.ovel-screen {
     width: 100%;
   }
 
-  .vga thead tr{
-    display: flex;
-    flex-direction: column;
-  }
-
-  .vga tbody {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .vga tbody tr {
-    display: flex;
-    flex-direction: column;
-  }
-
   .vga tbody td {
-    width: 100% !important;
+    text-align: center !important;
+  }
+  .vga tbody td.overal {
+    width: 50% !important;
     text-align: center !important;
   }
 
@@ -339,5 +323,266 @@ div.ovel-screen {
 
   .vga tbody td .rounded-pill {
     margin: 0;
+  }
+}
+@media only screen and (max-width: 300px) {
+  .title {
+    font-size: 20px;
+  }
+
+  .grafik img {
+    width: 200px;
+  }
+
+  .judul-text p {
+    font-size: 16px;
+  }
+
+  .Batenmer {
+    flex-direction: column;
+  }
+
+  .baterai-screen {
+    width: 100%;
+  }
+
+  .memory {
+    width: 100%;
+  }
+
+  .vga tbody td {
+    text-align: center !important;
+  }
+  .vga tbody td.overal {
+    width: 50% !important;
+    text-align: center !important;
+  }
+
+  .vga tbody td p {
+    text-align: center !important;
+  }
+
+  .vga tbody td .rounded-pill {
+    margin: 0;
+  }
+}
+
+/* style wandi */
+
+@media only screen and (max-width: 480px) {
+  .nav {
+    position: fixed;
+    z-index: 999;
+    width: 100%;
+  }
+
+  @keyframes slideIn {
+    from {
+      transform: translateY(25%);
+      opacity: 0;
+    }
+
+    to {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+
+  .memory.animate {
+    animation: slideIn 1s ease-in forwards;
+  }
+
+  .baterai-screen.animate {
+    animation: slideIn 1s ease-in forwards;
+  }
+
+  .os.animate {
+    animation: slideIn 1s ease-in forwards;
+  }
+
+  .fitur.animate {
+    animation: slideIn 1s ease-in forwards;
+  }
+
+  .vga.animate {
+    animation: slideIn 1s ease-in forwards;
+  }
+
+  @media only screen and (min-width: 1900px) {
+    .memory.animate {
+      animation: none;
+    }
+
+    .baterai-screen.animate {
+      animation: none;
+    }
+
+    .os.animate {
+      animation: none;
+    }
+
+    .fitur.animate {
+      animation: none;
+    }
+
+    .vga.animate {
+      animation: none;
+    }
+  }
+
+  @media only screen and (min-width: 1400px) {
+    .vga.animate {
+      animation: none;
+    }
+
+    .os.animate {
+      animation: none;
+    }
+  }
+
+  @media only screen and (min-width: 1024px) {
+    .vga.animate {
+      animation: none;
+    }
+  }
+
+  @media only screen and (max-width: 768px) {
+    .vga.animate {
+      animation: slideIn 1s ease-in forwards;
+    }
+
+    .prosesor.animate {
+      animation: slideIn 1s ease-in forwards;
+    }
+  }
+
+  @media only screen and (max-width: 480px) {
+    .nav {
+      position: fixed;
+      z-index: 999;
+      width: 100%;
+      /* Adjust width as needed */
+    }
+
+    .nav-button {
+      background-color: #fff;
+      color: black;
+      border-radius: 50%;
+      width: 10vw;
+      /* Adjust width based on viewport */
+      height: 10vw;
+      /* Maintain aspect ratio */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+      font-size: 2vw;
+      /* Adjust font size based on viewport */
+      box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+      position: absolute;
+      top: -40px;
+      left: 10px;
+      z-index: 1000;
+    }
+
+    .nav-content {
+      position: absolute;
+      top: -3vw;
+      left: 15px;
+      right: 0;
+      width: 80% !important;
+      display: flex;
+      flex-direction: column;
+      background-color: #fff;
+      border-radius: 0 0 10px 10px !important;
+      transform: scaleY(0);
+      transform-origin: top;
+      transition: transform 0.3s ease-in-out;
+      box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+      border: 1px solid black;
+    }
+
+    .nav-content a {
+      color: black;
+      text-decoration: none;
+    }
+
+    .nav-content li {
+      list-style-type: none;
+      font-weight: bold;
+    }
+
+    .nav-content .active {
+      border-bottom: 2px solid orange;
+    }
+
+    .nav-content.open {
+      transform: scaleY(1);
+    }
+
+    .nav-button {
+      background-color: #fff;
+      color: black;
+      border-radius: 50%;
+      width: 10vw;
+      height: 10vw;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+      font-size: 2vw;
+      box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+      position: absolute;
+      top: -40px;
+      left: 10px;
+      z-index: 1000;
+    }
+
+    .nav-content {
+      position: absolute;
+      top: -3vw;
+      left: 15px;
+      right: 0;
+      width: 80% !important;
+      display: flex;
+      flex-direction: column;
+      background-color: #fff;
+      border-radius: 0 0 10px 10px !important;
+      transform: scaleY(0);
+      transform-origin: top;
+      transition: transform 0.3s ease-in-out;
+      box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+      border: 1px solid black;
+    }
+
+    .nav-content a {
+      color: black;
+      text-decoration: none;
+    }
+
+    .nav-content li {
+      list-style-type: none;
+      font-weight: bold;
+    }
+
+    .nav-content .active {
+      border-bottom: 2px solid orange;
+    }
+
+    .nav-content.open {
+      transform: scaleY(1);
+    }
+
+    .title {
+      margin-top: 15%;
+    }
+  }
+
+  .vga.animate {
+    animation: none;
+  }
+
+  .prosesor.animate {
+    animation: slideIn 1s ease-in forwards;
   }
 }
