--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,5 +1,8 @@
 /* laptop and tablet */
 @media only screen and (min-width: 1920px) {
+  .footer .desc {
+    gap: 3rem;
+  }
   .footer .bottom {
     padding: 0.5rem 3rem;
     display: flex;
@@ -42,6 +45,9 @@
 }
 
 @media only screen and (max-width: 1920px) {
+  .footer .desc {
+    gap: 3rem;
+  }
   .footer .bottom {
     padding: 0.5rem 3rem;
     display: flex;
@@ -83,6 +89,9 @@
   }
 }
 @media only screen and (max-width: 1366px) {
+  .footer .desc {
+    gap: 3rem;
+  }
   .footer .bottom {
     padding: 0.5rem 3rem;
     display: flex;
@@ -138,6 +147,7 @@
 @media only screen and (max-width: 768px) {
   .footer .desc {
     flex-direction: column;
+    gap: 1rem;
   }
   .footer .desc .data-desc-1 {
     width: 100%;
@@ -164,8 +174,16 @@
     display: flex;
     justify-content: space-between;
   }
+  .footer .desc .data-desc-1 .grid {
+    display: flex;
+    gap: 1rem;
+  }
 }
 @media only screen and (max-width: 480px) {
+  .footer .desc {
+    flex-direction: column;
+    gap: 1rem;
+  }
   .footer .desc .data-desc-1 {
     width: 100%;
   }
@@ -180,6 +198,11 @@
   }
   .footer .desc .data-desc-1 ul {
     padding: 0;
+  }
+  .footer .desc .data-desc-1 .grid {
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 1rem;
   }
   .footer .desc .data-desc-2 ul {
     padding: 0;
